--- a/src/blocks/list-regular/list-regular.scss
+++ b/src/blocks/list-regular/list-regular.scss
@@ -26,7 +26,8 @@
       top: 0.8em;
       transform: translateY(-50%);
       border-radius: 50%;
-      background-color: $tw-gray-300;
+      // background-color: $tw-gray-300;
+      background-color: #28cfa7;
 
       @media (min-width: $screen-lg) {
         width: 0.18em;
