--- a/src/pages/cure.pug
+++ b/src/pages/cure.pug
@@ -35,14 +35,10 @@ block content
                 option(value='#article-index-tab-03' role='tab') Вопрос-ответ
                 option(value='#article-index-tab-04' role='tab') Случаи из практики
             ul#article-index-tab(class="article-index__nav-tabs nav nav-tabs hidden md_flex" role="tablist")
-              li(class="nav-item" role="presentation")
-                button.nav-link.active(data-bs-toggle="tab" data-bs-target="#article-index-tab-01" type="button" role="tab" aria-controls="Заболевания" aria-selected="true") Заболевания
-              li(class="nav-item" role="presentation")
-                button.nav-link(data-bs-toggle="tab" data-bs-target="#article-index-tab-02" type="button" role="tab" aria-controls="Реабилитация и профилактика" aria-selected="false") Реабилитация и профилактика
-              li(class="nav-item" role="presentation")
-                button.nav-link(data-bs-toggle="tab" data-bs-target="#article-index-tab-03" type="button" role="tab" aria-controls="Вопрос-ответ" aria-selected="false") Вопрос-ответ
-              li(class="nav-item" role="presentation")
-                button.nav-link(data-bs-toggle="tab" data-bs-target="#article-index-tab-04" type="button" role="tab" aria-controls="Случаи из практики" aria-selected="false") Случаи из практики
+              button.nav-link.active(data-bs-toggle="tab" data-bs-target="#article-index-tab-01" type="button" role="tab" aria-controls="Заболевания" aria-selected="true") Заболевания
+              button.nav-link(data-bs-toggle="tab" data-bs-target="#article-index-tab-02" type="button" role="tab" aria-controls="Реабилитация и профилактика" aria-selected="false") Реабилитация и профилактика
+              button.nav-link(data-bs-toggle="tab" data-bs-target="#article-index-tab-03" type="button" role="tab" aria-controls="Вопрос-ответ" aria-selected="false") Вопрос-ответ
+              button.nav-link(data-bs-toggle="tab" data-bs-target="#article-index-tab-04" type="button" role="tab" aria-controls="Случаи из практики" aria-selected="false") Случаи из практики
             .tab-content.article-index__tab-content#article-index-tab-content
               ul.article-index__tab-pane.tab-pane.article-index__tab-pane.fade.show.active#article-index-tab-01(role="tabpanel")
                 <li>
@@ -115,119 +111,137 @@ block content
                     <a href="#">п2 Ретенция зубов</a>
                 </li>
                 <li>
-                    <a href="#">3 Зачем пломбировать молочные зубы?</a>
+                    <a href="#">Потемнение молочных зубов</a>
                 </li>
                 <li>
-                    <a href="#">3 Кариес молочных зубов: родителям на заметку</a>
+                    <a href="#">Причины неприятного запаха изо рта у ребёнка</a>
                 </li>
                 <li>
-                    <a href="#">3 Потемнение молочных зубов</a>
+                    <a href="#">Причины неприятного запаха изо рта у ребёнка</a>
                 </li>
                 <li>
-                    <a href="#">3 Причины неприятного запаха изо рта у ребёнка</a>
+                    <a href="#">Шишка на десне у ребёнка</a>
                 </li>
                 <li>
-                    <a href="#">3 Причины неприятного запаха изо рта у ребёнка</a>
+                    <a href="#">Продукты, полезные для зубов</a>
                 </li>
                 <li>
-                    <a href="#">3 Шишка на десне у ребёнка</a>
+                    <a href="#">Продукты, полезные для зубов</a>
                 </li>
                 <li>
-                    <a href="#">3 Продукты, полезные для зубов</a>
+                    <a href="#">Выпал молочный зуб, а новый не растет</a>
                 </li>
                 <li>
-                    <a href="#">3 Продукты, полезные для зубов</a>
+                    <a href="#">Ретенция зубов</a>
                 </li>
                 <li>
-                    <a href="#">3 Выпал молочный зуб, а новый не растет</a>
+                    <a href="#">п2 Зачем пломбировать молочные зубы?</a>
                 </li>
                 <li>
-                    <a href="#">3 Ретенция зубов</a>
+                    <a href="#">п2 Кариес молочных зубов: родителям на заметку</a>
                 </li>
                 <li>
-                    <a href="#">4 Зачем пломбировать молочные зубы?</a>
+                    <a href="#">п2 Потемнение молочных зубов</a>
                 </li>
                 <li>
-                    <a href="#">4 Кариес молочных зубов: родителям на заметку Кариес молочных зубов: родителям на заметку</a>
+                    <a href="#">п2 Причины неприятного запаха изо рта у ребёнка</a>
+                </li>
+                <li>
+                    <a href="#">п2 Причины неприятного запаха изо рта у ребёнка</a>
+                </li>
+                <li>
+                    <a href="#">п2 Шишка на десне у ребёнка</a>
+                </li>
+                <li>
+                    <a href="#">п2 Продукты, полезные для зубов</a>
+                </li>
+                <li>
+                    <a href="#">п2 Продукты, полезные для зубов</a>
+                </li>
+                <li>
+                    <a href="#">п2 Выпал молочный зуб, а новый не растет</a>
+                </li>
+                <li>
+                    <a href="#">п2 Ретенция зубов</a>
                 </li>
               ul.article-index__tab-pane.tab-pane.fade#article-index-tab-02(role="tabpanel")
-                <li>
-                    <a href="#">Абсцесс</a>
-                </li>
-                <li>
-                    <a href="#">Аденовирусная инфекция</a>
-                </li>
-                <li>
-                    <a href="#">Аденома щитовидной железы</a>
-                </li>
-                <li>
-                    <a href="#">Аллергия</a>
-                </li>
-                <li>
-                    <a href="#">Амблиопия</a>
-                </li>
-                <li>
-                    <a href="#">Абсцесс</a>
-                </li>
-                <li>
-                    <a href="#">Аллергия</a>
-                </li>
-                <li>
-                    <a href="#">Авитаминоз</a>
-                </li>
-                <li>
-                    <a href="#">Аденоиды</a>
-                </li>
-                <li>
-                    <a href="#">Адреногенитальный синдром</a>
-                </li>
-                <li>
-                    <a href="#">Аллергологические пробы</a>
-                </li>
-                <li>
-                    <a href="#">Аменорея</a>
-                </li>
-                <li>
-                    <a href="#">Авитаминоз</a>
-                </li>
-                <li>
-                    <a href="#">Абсцесс</a>
-                </li>
-                <li>
-                    <a href="#">Аденовирусная инфекция</a>
-                </li>
-                <li>
-                    <a href="#">Аденома щитовидной железы</a>
-                </li>
-                <li>
-                    <a href="#">Аллергия</a>
-                </li>
-                <li>
-                    <a href="#">Амблиопия</a>
-                </li>
-                <li>
-                    <a href="#">Абсцесс</a>
-                </li>
-                <li>
-                    <a href="#">Аллергия</a>
-                </li>
-                <li>
-                    <a href="#">Авитаминоз</a>
-                </li>
-                <li>
-                    <a href="#">Аденоиды</a>
-                </li>
-                <li>
-                    <a href="#">Адреногенитальный синдром</a>
-                </li>
-                <li>
-                    <a href="#">Аллергологические пробы</a>
-                </li>
-                <li>
-                    <a href="#">Аменорея</a>
-                </li>
-                <li>
-                    <a href="#">Авитаминоз</a>
+                //- <li>
+                //-     <a href="#">Абсцесс</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аденовирусная инфекция</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аденома щитовидной железы</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аллергия</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Амблиопия</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Абсцесс</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аллергия</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Авитаминоз</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аденоиды</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Адреногенитальный синдром</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аллергологические пробы</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аменорея</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Авитаминоз</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Абсцесс</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аденовирусная инфекция</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аденома щитовидной железы</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аллергия</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Амблиопия</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Абсцесс</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аллергия</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Авитаминоз</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аденоиды</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Адреногенитальный синдром</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аллергологические пробы</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аменорея</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Авитаминоз</a>
                 </li>
                 <li>
                     <a href="#">Бореллиоз</a>
@@ -239,18 +253,18 @@ block content
                 <li>
                     <a href="#">Адреногенитальный синдром</a>
                 </li>
-                <li>
-                    <a href="#">Аллергологические пробы</a>
-                </li>
-                <li>
-                    <a href="#">Аменорея</a>
-                </li>
-                <li>
-                    <a href="#">Авитаминоз</a>
-                </li>
-                <li>
-                    <a href="#">Бореллиоз</a>
-                </li>
+                //- <li>
+                //-     <a href="#">Аллергологические пробы</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Аменорея</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Авитаминоз</a>
+                //- </li>
+                //- <li>
+                //-     <a href="#">Бореллиоз</a>
+                //- </li>
 
               ul.article-index__tab-pane.tab-pane.fade#article-index-tab-04(role="tabpanel")
                 p Случаи из практики
