--- a/src/blocks/article-index/article-index.scss
+++ b/src/blocks/article-index/article-index.scss
@@ -80,6 +80,12 @@
         background-color: $tw-red-900;
       }
     }
+
+    &[disabled] {
+      opacity: $opacity;
+      cursor: not-allowed;
+      pointer-events: none;
+    }
   }
 
   &__tabs {
