--- a/src/blocks/author/author.scss
+++ b/src/blocks/author/author.scss
@@ -4,7 +4,7 @@
 
 .author {
 
-  $block-name:                &; // #{$block-name}__element
+  $block-name: &; // #{$block-name}__element
 
   display: flex;
   align-items: center;
@@ -48,15 +48,49 @@
   &--ask-doctor {
     margin-bottom: 20px;
 
+    #{$block-name}__img {
+
+      .ramform & {
+        margin-right: 20px !important;
+
+        @media (min-width: $screen-md) {
+          margin-right: 0 !important;
+        }
+      }
+    }
+
+    .ramform & {
+      display: flex;
+
+      @media (min-width: $screen-md) {
+        flex-direction: column;
+      }
+    }
+
+    #{$block-name}__info {
+      .ramform & {
+        text-align: left;
+
+        @media (min-width: $screen-md) {
+          text-align: center;
+        }
+      }
+    }
+
     @media (min-width: $screen-lg) {
       flex-direction: column;
 
       #{$block-name}__img {
-        width: 219px;
-        height: 219px;
+        width: 180px;
+        height: 180px;
         margin-right: 30px;
         margin-bottom: 20px;
         border-radius: 24px;
+
+        @at-root .consult & {
+          width: 180px;
+          height: 180px;
+        }
       }
 
       #{$block-name}__text {
@@ -67,12 +101,14 @@
         @apply text-xl;
       }
     }
+
   }
 
   &--article {
     #{$block-name}__name {
       @apply text-lg;
     }
+
     #{$block-name}__text {
       @applay text-sm;
     }
@@ -80,21 +116,26 @@
 
   &--faq {
     align-items: flex-start;
+
     @media (min-width: $screen-lg) {
       align-items: center;
       margin-bottom: 30px;
     }
+
     #{$block-name}__name {
       @apply text-lg;
+
       @media (min-width: $screen-lg) {
         @apply text-xl;
       }
     }
+
     #{$block-name}__text {
       @apply text-base;
       line-height: 26px;
       margin-bottom: 3px;
     }
+
     #{$block-name}__img {
       margin-right: 20px;
       width: 100px;
