--- a/src/blocks/cart-payment/cart-payment.pug
+++ b/src/blocks/cart-payment/cart-payment.pug
@@ -78,7 +78,17 @@ mixin cart-payment(props={}, mods)
         <div class="bx-total-coupon-container">
           <div class="bx-soa-coupon">
             <div class="bx-soa-coupon-block">
-              <div class="bx-soa-coupon-input"><input class="tanais-form-control bx-ios-fix" type="text" placeholder='Введите промокод'><span class="bx-soa-coupon-btn"></span></div><span class="bx-soa-coupon-item"></span>
+              <div class="bx-soa-coupon-input"><input class="tanais-form-control bx-ios-fix" type="text" placeholder='Введите промокод'><span class="bx-soa-coupon-btn"></span></div>
+              <span class="bx-soa-coupon-item">
+                <div data-coupon="WWE88" class="bx-soa-coupon-item-success">
+                  <div class="bx-soa-coupon-title-bonus">Промокод применен</div>
+                  <div class="bx-soa-coupon-bonus-name">Промокод «WWE88»</div><span class="bx-soa-coupon-remove bx-soa-coupon-delete">Удалить</span>
+                </div>
+                <div data-coupon="https://rikta.ru/personal/cart/" class="bx-soa-coupon-item-danger">
+                  <div class="bx-soa-coupon-title-bonus">Промокод применен</div>
+                  <div class="bx-soa-coupon-bonus-name">Промокод «https://rikta.ru/personal/cart/»</div><span class="bx-soa-coupon-remove bx-soa-coupon-delete">Удалить</span>
+                </div>
+              </span>
             </div>
           </div>
         </div>
