--- a/src/blocks/code/code.scss
+++ b/src/blocks/code/code.scss
@@ -7,7 +7,7 @@
   width: 100%;
   max-height: 500px;
   margin-top: $typo-margin-vertical;
-  margin-bottom: $typo-margin-vertical;
+  margin-bottom: 30px;
   border-radius: $border-radius;
   border: 1px solid $gray-lighter;
   padding: 0.5em 1em;
@@ -22,6 +22,10 @@
     padding: 0;
     white-space: pre;
     background-color: transparent;
+
+    @media (min-width: $screen-lg) {
+      white-space: break-spaces;
+    }
 
     p,
     div {
