--- a/src/blocks/info-tip/info-tip.pug
+++ b/src/blocks/info-tip/info-tip.pug
@@ -13,4 +13,4 @@ mixin info-tip(props={}, mods)
     }
 
   span.info-tip(class=allMods)&attributes(attributes)
-    +svg('info','',{width:'14',height:'14'})(class="filter__info")
+    //- +svg('info','',{width:'14',height:'14'})(class="filter__info")
