--- a/src/blocks/page-links/page-links.scss
+++ b/src/blocks/page-links/page-links.scss
@@ -9,6 +9,16 @@
   margin-bottom: 0;
   border-bottom: 1px solid $tw-gray-200;
 
+  @at-root ul#{&} {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    #{$block-name}__item {
+      margin-bottom: 0;
+    }
+  }
+
   &--delivery {
 
     .nav-item {
@@ -48,6 +58,5 @@
       text-align: center;
       line-height: 1.2;
     }
-
   }
 }
