--- a/src/blocks/product-main/product-main.scss
+++ b/src/blocks/product-main/product-main.scss
@@ -56,6 +56,7 @@
 
   &__slider-wrapper {
     margin-bottom: auto;
+    // height: 100%;
   }
 
   &__slider-item {
@@ -68,7 +69,8 @@
     }
 
     @media (min-width: $screen-lg) {
-      height: auto;
+      // height: auto;
+      height: 100%;
     }
 
     @media (min-width: $screen-xxl) {
@@ -170,6 +172,10 @@
       width: 100%;
       height: 100%;
       object-fit: contain !important;
+    }
+
+    &[data-src] {
+      cursor: zoom-in;
     }
   }
 
@@ -273,6 +279,7 @@
 
   &__price-wrapper {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -282,6 +289,9 @@
       margin-top: 0;
       grid-column-start: 2;
       grid-column-end: 4;
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-rows: auto auto 1fr;
     }
   }
 
@@ -290,15 +300,31 @@
     line-height: 28px;
 
     @media (min-width: $screen-lg) {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 1;
+      grid-row-end: 2;
       @apply text-36px;
+    }
+
+    & + .w-full {
+      margin-top: 5px;
+      margin-bottom: 10px;
+      grid-column-start: 1;
+      grid-column-end: 4;
+      grid-row-start: 2;
+      grid-row-end: 3;
     }
   }
 
   &__price-old {
-    text-decoration: line-through;
-    opacity: 0.3;
+    opacity: 0.85;
 
     @media (min-width: $screen-lg) {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 2;
       font-size: 24px;
       line-height: 34px;
     }
@@ -358,5 +384,13 @@
     &--others {
       color: $tw-blue_link;
     }
+  }
+
+  .tns-outer,
+  .tns-ovh,
+  .tns-inner,
+  .tns-slider
+   {
+    height: 100%;
   }
 }
