--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,3 +1,7 @@
+// .cart-page #bx-soa-total {
+//   grid-row-end: 7 !important;
+// }
+
 // .btn--simple + .tns-outer {
 //   background-color: red !important;
 //   color: green !important;
