--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,3 +1,8 @@
+body *:focus {
+  background-color: red !important;
+  outline: 2px solid red !important;
+}
+
 // .cart-page #bx-soa-total {
 //   grid-row-end: 7 !important;
 // }
