--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -68,6 +68,20 @@ block content
               p Артрит коленных суставов относят к часто встречающимся патологиям воспалительного характера. Причины их развития бывают разнообразными. Суставные патологии при артрите всегда сопровождаются болевыми ощущениями. Из-за болезненности снижается объем движений в суставе.
           p(class='!mb-25px') Проявления заболевания существенно снижают качество жизни пациента. Артрит нередко служит причиной развития инвалидности в относительно молодом возрасте. Чтобы не возникло этих проблем, при появлении начальных признаков заболевания необходимо сразу обращаться за медицинской помощью.
           p Если вы уже давно страдаете воспалением коленных суставов, не стоит отчаиваться. Сейчас разработано множество эффективных методов терапии этой болезни, которые помогают даже при хронических запущенных формах артрита.
+          +compare-slider()
+            +compare-slider-content()
+              +compare-card()
+                .compare-card__title Лечение зубов в домашних условиях аппаратом РИКТА
+                +svg('home','compare-card__icon',{width: 91, height: 88})
+                .compare-card__price
+                  span.compare-card__price-val 4 050₽
+                  span.compare-card__price-unit /сеанс *
+                span.compare-card__subtitle Плюсы лазерной терапии на дому:
+                .compare-card__list.compare-card__list--plus
+                 .compare-card__list-item Лечение более 200 болезней одним прибором
+                 .compare-card__list-item Проведение процедур в любое удобное время
+                 .compare-card__list-item Можете лечить всю семью
+                .compare-card__add * рассчитано для аппарата Рикта-Эсмил (2А)-03 при условии проведения 10 сеансов
           h2#desc Что собой представляет патология
           .article__img.img-cover.h-200px.lg_h-auto.mb-35px.lg_mb-30px
             img.lazyload(
