--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -109,7 +109,10 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    // content: url('../screens/my-orders2-page.jpg');
+    top: -418px; //article-mobile
+    top: -128px; //article-page
+    left: 0;
+    // content: url('../screens/article-page.jpg');
     opacity: 1;
   }
 
