--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,3 +1,14 @@
+// .compare-card {
+//   background-color: transparent !important;
+//   color: red !important;
+//   outline: 1px solid red;
+
+//   * {
+//     color: red !important;
+//   }
+// }
+
+
 // .cart-page #bx-soa-total {
 //   grid-row-end: 7 !important;
 // }
