--- a/src/blocks/compare-slider/compare-slider.pug
+++ b/src/blocks/compare-slider/compare-slider.pug
@@ -29,16 +29,17 @@ mixin compare-slider-after(props={})
   .compare-slider__before&attributes(attributes)
     .compare-slider__content.compare-slider__content--before
       +compare-card()
-        .compare-card__title Лечение лазером в стоматологической клинике
-        +svg('hospital','compare-card__icon',{width: 99, height: 88})
-        .compare-card__price
-          span.compare-card__price-val 500-4000₽
-          span.compare-card__price-unit /сеанс *
-        span.compare-card__subtitle Минусы лечения в клинике:
-        .compare-card__list.compare-card__list--minus
-          .compare-card__list-item Закрываете одну конкретную проблему
-          .compare-card__list-item Надо подгадывать время для визита
-          .compare-card__list-item Тратите деньги и время на дорогу
-          .compare-card__list-item Стоять в пробке/толкаться в транспорте
-        .compare-card__add * в зависимости от заболевания
+        .compare-card__title Лечение лазером в&nbsp;стоматологической клинике
+        .compare-card__content
+          +svg('hospital','compare-card__icon',{width: 99, height: 88})
+          .compare-card__price
+            span.compare-card__price-val 500-4000₽
+            span.compare-card__price-unit /сеанс *
+          span.compare-card__subtitle Минусы лечения в клинике:
+          .compare-card__list.compare-card__list--minus
+            .compare-card__list-item Закрываете одну конкретную проблему
+            .compare-card__list-item Надо подгадывать время для визита
+            .compare-card__list-item Тратите деньги и время на дорогу
+            .compare-card__list-item Стоять в пробке/толкаться в транспорте
+          .compare-card__add * в зависимости от заболевания
 
