--- a/src/blocks/compare-slider/compare-slider.scss
+++ b/src/blocks/compare-slider/compare-slider.scss
@@ -10,8 +10,10 @@
   &__after {
     position: relative;
     width: 100%;
+    border-radius: 8px;
+    overflow: hidden;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       display: flex;
       justify-content: space-between;
       width: auto;
@@ -26,9 +28,9 @@
     left: 0;
     overflow: hidden;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       position: static !important;
-      width: 49% !important;
+      width: 48% !important;
       order: -1;
     }
 
@@ -46,13 +48,12 @@
     vertical-align: middle;
     width: 100%;
     height: 100%;
-    background-color: #fff;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       height: auto;
 
       &--after {
-        width: 49% !important;
+        width: 48% !important;
       }
 
       &--before {
@@ -70,7 +71,7 @@
     cursor: ew-resize;
     z-index: 9;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       display: none;
     }
   }
@@ -80,11 +81,14 @@
     top: 50%;
     width: 40px;
     height: 40px;
+    margin-left: 2px;
     background-color: #2196F3;
     border-radius: 50%;
     cursor: ew-resize;
     transform: translate(-50%);
-    margin-left: 2px;
+    background-image: url('../img/arrows-move-h-white.svg');
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
 
